# TongYiOpenAi

./: .gitmodules  CMakeLists.txt  README.md
demo/: CMakeLists.txt  ImageEdit.cpp  ImageTranslation.cpp
docs/阿里百炼文档集/: 获取api key.md  配置api key到环境变量.md
include/TongYiOpenAi/: TongYiOpenAi.hpp
src/: CMakeLists.txt  main.cpp
